--- a/breakfast/breakfast.csproj
+++ b/breakfast/breakfast.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="1.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\breakfastapp.contracts\breakfastapp.contracts.csproj" />
   </ItemGroup>
 
